@@ -1,5 +1,8 @@
 2001-10-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* data/*/defaultkeys.txt: fixed abacus keybinding
+	* GameplayOptions_gump.cc: cleaned up loading of bg_paperdolls setting
+	* cheat_screen.cc: save paperdoll setting here too
+	* gamewin.cc: fixed loading of bg_paperdoll setting
 
 2001-10-12  Tristan Tarrant <nadir@users.sourceforge.net>
 	More patches from Christian Ohm <chr.ohm@gmx.net>
